T-4 implement dynanmodb
