# src/deployment/deployments.controller.ts
@@ -1,11 +1,14 @@
-import {Controller, Get, HttpCode, HttpStatus, Inject, Post, Req} from '@nestjs/common';
+import {Controller, Get, HttpCode, HttpStatus, Inject, Param, Post, Req} from '@nestjs/common';
 import {IDeploymentsRepository} from '../repository/IDeploymentsRepository';
+import {Environment, ListEnvironmentsResponse} from '../model/http/ListEnvironmentsResponse';
+import {ListDeploymentsResponse} from '../model/http/ListDeploymentsResponse';
 
 @Controller('/v1/deployments')
 export class DeploymentsController {
   constructor(
       @Inject('IDeploymentsRepository') private readonly repository: IDeploymentsRepository
-  ) {}
+  ) {
+  }
 
   @Post()
   @HttpCode(HttpStatus.CREATED)
@@ -14,12 +17,28 @@ export class DeploymentsController {
   }
 
   @Get('/:teamName')
-  getEnvironments() {
-    return 'This action returns all environments';
+  async getEnvironments(@Param() param): Promise<ListEnvironmentsResponse> {
+    const envs = await this.repository.listEnvironments(param.teamName);
+    const response = new ListEnvironmentsResponse();
+    response.environments = envs.map(env => {
+      const environment = new Environment();
+      environment.environment_name = env;
+      return environment;
+    });
+    return response;
   }
 
   @Get('/:teamName/:environmentName')
-  getDeployments() {
-    return 'This action returns all deployments for a team and environment';
+  async getDeployments(@Param() param): Promise<ListDeploymentsResponse> {
+    const deployments = await this.repository.listDeployments(param.teamName, param.environmentName);
+    const response = new ListDeploymentsResponse();
+    deployments.forEach(deployment => {
+      const applicationName = deployment.applicationName;
+      if (!response[applicationName]) {
+        response[applicationName] = [];
+      }
+      response[applicationName].push(deployment);
+    });
+    return response;
   }
 }
